--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vrpip.coolweather">
 
+    <!--获取联网权限-->
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -18,6 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".activity.WeatherActivity"></activity>
 
     </application>
 
